# Instamatic-Instagram-Growth-Automator

./: .gitignore  README.md  auto_run.sh  pyproject.toml  requirements.txt  requirements_installed.txt
Instamatic/core/: bot_flow.py  device_facade.py  handle_sources.py  resources.py  utils.py  views.py
Instamatic/plugins/: interact_blogger_post_likers.py
accounts and autoruns/: auto_run.sh
