[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "Instamatic"
authors = [{ name = "Instamatic Team", email = "maintainers@instamatic.org" }]
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3"
]
license = { file = "LICENSE" }
requires-python = ">=3.6"
dynamic = ["version", "description"]
dependencies = [
    "colorama==0.4.4",
    "ConfigArgParse==1.5.3",
    "PyYAML==6.0.1",
    "uiautomator2==2.16.14",
    "urllib3==2.6.0",
    "emoji==1.6.1",
    "langdetect==1.0.9",
    "atomicwrites==1.4.0",
    "spintax==1.0.4",
    "requests~=2.31.0",
    "packaging~=20.9"
]

[project.optional-dependencies]
analytics = ["matplotlib==3.4.2"]
dev = ["flit", "pre-commit", "black", "flake8", "isort", "ruff"]

[project.urls]
Documentation = "https://github.com/Instamatic/bot#readme"
Source = "https://github.com/Instamatic/bot"

[project.scripts]
instamatic = "Instamatic.__main__:main"